--- a/package.json
+++ b/package.json
@@ -1,33 +1,24 @@
 {
   "name": "hm08-qa-us",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "lint": "npx eslint .",
-    "build": "rm -rf ./node_modules && npm install",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "wdio": "wdio run ./wdio.conf.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "webdriverio": "^8.6.7"
-  },
+  "description": "",
   "devDependencies": {
-    "@wdio/cli": "^8.6.7",
-    "@wdio/devtools-service": "^8.6.9",
-    "@wdio/local-runner": "^8.6.7",
-    "@wdio/mocha-framework": "^8.6.6",
-    "@wdio/spec-reporter": "^8.6.6",
-    "chromedriver": "^127.0.2",
-    "eslint": "^8.38.0",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-wdio": "^8.0.14",
-    "geckodriver": "^3.2.0",
-    "wdio-chromedriver-service": "^8.1.1",
-    "wdio-eslinter-service": "^0.0.4",
-    "wdio-geckodriver-service": "^4.1.1",
-    "wdio-intercept-service": "4.0.0"
+    "@wdio/cli": "^9.0.7",
+    "@wdio/local-runner": "^9.0.7",
+    "@wdio/mocha-framework": "^9.0.6",
+    "@wdio/spec-reporter": "^9.0.7",
+    "wdio-intercept-service": "^4.4.1",
+    "wdio-wait-for": "^3.0.11"
   }
 }
